# lamas-py

./: .gitignore  Makefile  README.md  ROADMAP.md  current_customer_backend_error.md  docker-compose.yml
.agent/skills/: api-design-principles  architecture-patterns  fastapi-templates  github-actions-templates  (+2 more)
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/endpoints/: auth.py  credit_risks.py  creditgraph.py  customers.py  documents.py  loan_applications.py
backend/app/core/: __init__.py  config.py  database.py  logging_config.py  security.py
backend/app/models/: __init__.py  address.py  credit_risk.py  creditgraph.py  customer.py  document.py  loan_application.py  phone.py  portfolio.py  user.py
backend/app/schemas/: creditgraph.py  customer.py  document.py  loan_application.py
backend/app/services/: creditgraph_client.py  creditgraph_service.py  customer_service.py  loan_application_service.py  storage.py
backend/app/utils/: validators.py
backend/scripts/: init_db.py  seed_customers.py  seed_loans.py  setup_db.py
backend/tests/: conftest.py  test_creditgraph_api.py  test_customer_service.py  test_customers_api.py  test_documents_api.py  test_health.py  test_loan_applications_api.py  test_polymorphic_fixes.py
backend/tests/factories/: customer_factory.py  loan_application_factory.py
docs/: README.md  status-report.md
frontend/: auth.ts  middleware.ts  package.json  pnpm-lock.yaml  tsc_errors.txt  vitest.config.ts  vitest.setup.ts
(+71 files in other folders)
